--- a/Unit_life/life_project/requirements.txt
+++ b/Unit_life/life_project/requirements.txt
@@ -3,4 +3,8 @@ django-crispy-forms==2.1
 crispy-bootstrap5==2023.10
 Pillow==10.1.0
 Gunicorn==20.1.0
+whitenoise==5.3.0
+psycopg2==2.9.2
+dj-database-url==0.5.0
+
 
