--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,78 @@
-.vscode/
+# Byte-compiled / optimized / DLL files
 __pycache__/
+*.py[cod]
+*$py.class
 
-# virtualenv
-my_django/
+# C extensions
+*.so
 
-# The local database
+# Distribution / packaging
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+pip-wheel-metadata/
+share/python-wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# Django stuff:
+*.log
+local_settings.py
 db.sqlite3
+db.sqlite3-journal
 
+# Pytest
+.cache
+.pytest_cache/
+
+# Coverage reports
 htmlcov/
 .coverage
+.coverage.*
+*.cover
+*.py,cover
+.coverage.json
 
-staticfiles
+# Static files
+/static/
 
+# Media files
+/media/
+
+# Virtual environment
+my_life_env/
+# Alternatively, if you use virtualenvwrapper or similar, you might have
+# virtual environments in a separate place, not in the project directory.
+# In such case, you may not need to include the environment directory here.
+
+# Environment variables
 .env
+
+# IDE-specific files
+.vscode/
+.idea/
+*.swp
+*.swo
+*.sublime-workspace
+*.sublime-project
+
+# Node modules (if you're using Node.js in your project)
+node_modules/
+
+# Logs
+logs/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
